<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".update">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/create_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:fontFamily="monospace"
            android:text="@string/daftar_kontak"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="186dp">

                <TextView
                    android:id="@+id/name1"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/nama"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text1"
                    app:layout_constraintVertical_bias="0.192" />

                <EditText
                    android:id="@+id/name2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/masukan_nama"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.944"
                    app:layout_constraintStart_toStartOf="@id/name1"
                    app:layout_constraintTop_toBottomOf="@+id/text1"
                    app:layout_constraintVertical_bias="0.123" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="186dp">

                <TextView
                    android:id="@+id/tl_textview"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/nomor_telepon"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text1"
                    app:layout_constraintVertical_bias="0.192" />

                <EditText
                    android:id="@+id/tl_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/masukan_nomor_telpon"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.944"
                    app:layout_constraintStart_toStartOf="@id/name1"
                    app:layout_constraintTop_toBottomOf="@+id/text1"
                    app:layout_constraintVertical_bias="0.123" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="186dp">

                <TextView
                    android:id="@+id/em_textview"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/email"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text1"
                    app:layout_constraintVertical_bias="0.192" />


                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/masukan_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.944"
                    app:layout_constraintStart_toStartOf="@id/name1"
                    app:layout_constraintTop_toBottomOf="@+id/text1"
                    app:layout_constraintVertical_bias="0.123" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="186dp">

                <TextView
                    android:id="@+id/alm_textview"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/alamat"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text1"
                    app:layout_constraintVertical_bias="0.192" />

                <EditText
                    android:id="@+id/alm_editview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/masukan_alamat"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.944"
                    app:layout_constraintStart_toStartOf="@id/name1"
                    app:layout_constraintTop_toBottomOf="@+id/text1"
                    app:layout_constraintVertical_bias="0.123" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="186dp">

                <Button
                    android:id="@+id/btn_unupdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="49dp"
                    android:background="@color/colorAccent"
                    android:text="@string/batal" />

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="49dp"
                    android:background="@color/colorAccent"
                    android:text="@string/ubah_data" />
            </TableRow>




        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>